--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Orbitron:400,700');
+
 .wedge:hover path {
     fill: rebeccapurple;
 }
@@ -36,4 +38,12 @@ svg a.link {
 
 .us .player {
     cursor: pointer;
+}
+
+body {
+    font-family: "Orbitron", sans-serif;
+}
+
+.inventory span {
+    white-space: nowrap;
 }
