--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Orbitron:400,700');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
 .wedge:hover path {
     fill: rebeccapurple;
@@ -29,7 +29,7 @@ svg a.link {
 }
 
 .us, .them {
-    width: 10em;
+    width: 15em;
 }
 
 .player.selected {
@@ -41,7 +41,7 @@ svg a.link {
 }
 
 body {
-    font-family: "Orbitron", sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 .inventory span {
