Allow for dropping and picking up weapons

--- a/src/style.css
+++ b/src/style.css
@@ -47,3 +47,11 @@ body {
 .inventory span {
     white-space: nowrap;
 }
+
+.ground {
+    margin: 0px auto;
+}
+
+.ground button {
+    display: block;
+}
